--- a/Languages/default-es.xml
+++ b/Languages/default-es.xml
@@ -921,7 +921,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Música de este álbum"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Episodios de esta serie"/>
 			</menu>
-			<menu text="_Web Services">
+			<menu id="ID_WEBSERVICES_LIST" text="_Web Services">
 			</menu>
 		</menu>
 		<menu name="CSearchWnd">
@@ -941,7 +941,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Música de este álbum"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Episodios de esta serie"/>
 			</menu>
-			<menu text="_Web Services">
+			<menu id="ID_WEBSERVICES_LIST" text="_Web Services">
 			</menu>
 			<separator/>
 			<item id="ID_SEARCH_FILTER" text="_Filtrar resultados..."/>
@@ -966,7 +966,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Música de este álbum"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Episodios de esta serie"/>
 			</menu>
-			<menu text="_Web Services">
+			<menu id="ID_WEBSERVICES_LIST" text="_Web Services">
 			</menu>
 		</menu>
 		<menu name="CBrowseHostWnd">
@@ -984,7 +984,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Música de este álbum"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Episodios de esta serie"/>
 			</menu>
-			<menu text="_Web Services">
+			<menu id="ID_WEBSERVICES_LIST" text="_Web Services">
 			</menu>
 			<separator/>
 			<item id="ID_SEARCH_FILTER" text="_Filtrar resultados..."/>
@@ -1008,7 +1008,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Música de este álbum"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Episodios de esta serie"/>
 			</menu>
-			<menu text="_Web Services">
+			<menu id="ID_WEBSERVICES_LIST" text="_Web Services">
 			</menu>
 			<separator/>
 			<item id="ID_SEARCH_FILTER" text="_Filtrar resultados..."/>
@@ -1243,7 +1243,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Música de este álbum"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Episodios de esta serie"/>
 			</menu>
-			<menu text="_Web Services">
+			<menu id="ID_WEBSERVICES_LIST" text="_Web Services">
 				<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 			</menu>
 			<menu text="O_rganizar">
@@ -1273,7 +1273,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Música de este álbum"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Episodios de esta serie"/>
 			</menu>
-			<menu text="_Web Services">
+			<menu id="ID_WEBSERVICES_LIST" text="_Web Services">
 				<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 				<separator/>
 				<item id="ID_LIBRARY_CREATETORRENT" text="Crear archivo .torrent"/>
@@ -1311,7 +1311,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Música de este álbum"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Episodios de esta serie"/>
 			</menu>
-			<menu text="_Web Services">
+			<menu id="ID_WEBSERVICES_LIST" text="_Web Services">
 			</menu>
 			<menu text="O_rganizar">
 				<item id="ID_LIBRARY_RENAME" text="_Renombrar archivo"/>
@@ -1344,7 +1344,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Música de este álbum"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Episodios de esta serie"/>
 			</menu>
-			<menu text="_Web Services">
+			<menu id="ID_WEBSERVICES_LIST" text="_Web Services">
 				<item id="ID_LIBRARY_CREATETORRENT" text="Crear archivo .torrent"/>
 			</menu>
 			<menu text="O_rganizar">
