--- a/Languages/default-nl.xml
+++ b/Languages/default-nl.xml
@@ -921,7 +921,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Muziek van hetzelfde al_bum"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Afleveringen uit dezelfde _serie"/>
 			</menu>
-			<menu text="_Internetdiensten">
+			<menu id="ID_WEBSERVICES_LIST" text="_Internetdiensten">
 			</menu>
 		</menu>
 		<menu name="CSearchWnd">
@@ -941,7 +941,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Muziek van hetzelfde al_bum"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Afleveringen uit dezelfde _serie"/>
 			</menu>
-			<menu text="_Internetdiensten">
+			<menu id="ID_WEBSERVICES_LIST" text="_Internetdiensten">
 			</menu>
 			<separator/>
 			<item id="ID_SEARCH_FILTER" text="Resultaten _filteren..."/>
@@ -966,7 +966,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Muziek van hetzelfde al_bum"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Afleveringen uit dezelfde _serie"/>
 			</menu>
-			<menu text="_Internetdiensten">
+			<menu id="ID_WEBSERVICES_LIST" text="_Internetdiensten">
 			</menu>
 		</menu>
 		<menu name="CBrowseHostWnd">
@@ -984,7 +984,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Muziek van hetzelfde al_bum"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Afleveringen uit dezelfde _serie"/>
 			</menu>
-			<menu text="_Internetdiensten">
+			<menu id="ID_WEBSERVICES_LIST" text="_Internetdiensten">
 			</menu>
 			<separator/>
 			<item id="ID_SEARCH_FILTER" text="Resultaten _filteren..."/>
@@ -1008,7 +1008,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Muziek van hetzelfde al_bum"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Afleveringen uit dezelfde _serie"/>
 			</menu>
-			<menu text="_Internetdiensten">
+			<menu id="ID_WEBSERVICES_LIST" text="_Internetdiensten">
 			</menu>
 			<separator/>
 			<item id="ID_SEARCH_FILTER" text="Resultaten _filteren..."/>
@@ -1243,7 +1243,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Muziek van hetzelfde al_bum"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Afleveringen uit dezelfde _serie"/>
 			</menu>
-			<menu text="_Internetdiensten">
+			<menu id="ID_WEBSERVICES_LIST" text="_Internetdiensten">
 				<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 			</menu>
 			<menu text="O_rganiseren">
@@ -1273,7 +1273,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Muziek van hetzelfde al_bum"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Afleveringen uit dezelfde _serie"/>
 			</menu>
-			<menu text="_Internetdiensten">
+			<menu id="ID_WEBSERVICES_LIST" text="_Internetdiensten">
 				<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 				<separator/>
 				<item id="ID_LIBRARY_CREATETORRENT" text="_Torrent bestand maken"/>
@@ -1311,7 +1311,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Muziek van hetzelfde al_bum"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Afleveringen uit dezelfde _serie"/>
 			</menu>
-			<menu text="_Internetdiensten">
+			<menu id="ID_WEBSERVICES_LIST" text="_Internetdiensten">
 			</menu>
 			<menu text="O_rganiseren">
 				<item id="ID_LIBRARY_RENAME" text="Bestand _hernoemen"/>
@@ -1344,7 +1344,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Muziek van hetzelfde al_bum"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Afleveringen uit dezelfde _serie"/>
 			</menu>
-			<menu text="_Internetdiensten">
+			<menu id="ID_WEBSERVICES_LIST" text="_Internetdiensten">
 				<item id="ID_LIBRARY_CREATETORRENT" text="_Torrent bestand maken"/>
 			</menu>
 			<menu text="O_rganiseren">
