--- a/Languages/default-no.xml
+++ b/Languages/default-no.xml
@@ -921,7 +921,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Musikk fra samme album"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Episode fra samme serie"/>
 			</menu>
-			<menu text="_Web søk">
+			<menu id="ID_WEBSERVICES_LIST" text="_Web søk">
 			</menu>
 		</menu>
 		<menu name="CSearchWnd">
@@ -941,7 +941,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Musikk fra samme album"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Episode fra samme serie"/>
 			</menu>
-			<menu text="_Web søk">
+			<menu id="ID_WEBSERVICES_LIST" text="_Web søk">
 			</menu>
 			<separator/>
 			<item id="ID_SEARCH_FILTER" text="Filtrer resultat..."/>
@@ -966,7 +966,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Musikk fra samme album"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Episode fra samme serie"/>
 			</menu>
-			<menu text="_Web søk">
+			<menu id="ID_WEBSERVICES_LIST" text="_Web søk">
 			</menu>
 		</menu>
 		<menu name="CBrowseHostWnd">
@@ -984,7 +984,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Musikk fra samme album"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Episode fra samme serie"/>
 			</menu>
-			<menu text="_Web søk">
+			<menu id="ID_WEBSERVICES_LIST" text="_Web søk">
 			</menu>
 			<separator/>
 			<item id="ID_SEARCH_FILTER" text="Filtrer resultat..."/>
@@ -1008,7 +1008,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Musikk fra samme album"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Episode fra samme serie"/>
 			</menu>
-			<menu text="_Web søk">
+			<menu id="ID_WEBSERVICES_LIST" text="_Web søk">
 			</menu>
 			<separator/>
 			<item id="ID_SEARCH_FILTER" text="Filtrer resultat..."/>
@@ -1243,7 +1243,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Musikk fra samme album"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Episode fra samme serie"/>
 			</menu>
-			<menu text="_Web søk">
+			<menu id="ID_WEBSERVICES_LIST" text="_Web søk">
 				<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 			</menu>
 			<menu text="Organisert">
@@ -1273,7 +1273,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Musikk fra samme album"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Episode fra samme serie"/>
 			</menu>
-			<menu text="_Web søk">
+			<menu id="ID_WEBSERVICES_LIST" text="_Web søk">
 				<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 				<separator/>
 				<item id="ID_LIBRARY_CREATETORRENT" text="Lag .torrent"/>
@@ -1311,7 +1311,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Musikk fra samme album"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Episode fra samme serie"/>
 			</menu>
-			<menu text="_Web søk">
+			<menu id="ID_WEBSERVICES_LIST" text="_Web søk">
 			</menu>
 			<menu text="Organisert">
 				<item id="ID_LIBRARY_RENAME" text="Gi nytt navn"/>
@@ -1344,7 +1344,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Musikk fra samme album"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Episode fra samme serie"/>
 			</menu>
-			<menu text="_Web søk">
+			<menu id="ID_WEBSERVICES_LIST" text="_Web søk">
 				<item id="ID_LIBRARY_CREATETORRENT" text="Lag .torrent"/>
 			</menu>
 			<menu text="Organisert">
