--- a/Languages/default-pl.xml
+++ b/Languages/default-pl.xml
@@ -921,7 +921,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Muzyka z tego samego albumu"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Odcinki tego samego serialu"/>
 			</menu>
-			<menu text="Usługi Web">
+			<menu id="ID_WEBSERVICES_LIST" text="Usługi Web">
 			</menu>
 		</menu>
 		<menu name="CSearchWnd">
@@ -941,7 +941,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Muzyka z tego samego albumu"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Odcinki tego samego serialu"/>
 			</menu>
-			<menu text="Usługi Web">
+			<menu id="ID_WEBSERVICES_LIST" text="Usługi Web">
 			</menu>
 			<separator/>
 			<item id="ID_SEARCH_FILTER" text="Filtruj wyniki..."/>
@@ -966,7 +966,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Muzyka z tego samego albumu"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Odcinki tego samego serialu"/>
 			</menu>
-			<menu text="Usługi Web">
+			<menu id="ID_WEBSERVICES_LIST" text="Usługi Web">
 			</menu>
 		</menu>
 		<menu name="CBrowseHostWnd">
@@ -984,7 +984,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Muzyka z tego samego albumu"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Odcinki tego samego serialu"/>
 			</menu>
-			<menu text="Usługi Web">
+			<menu id="ID_WEBSERVICES_LIST" text="Usługi Web">
 			</menu>
 			<separator/>
 			<item id="ID_SEARCH_FILTER" text="Filtruj wyniki..."/>
@@ -1008,7 +1008,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Muzyka z tego samego albumu"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Odcinki tego samego serialu"/>
 			</menu>
-			<menu text="Usługi Web">
+			<menu id="ID_WEBSERVICES_LIST" text="Usługi Web">
 			</menu>
 			<separator/>
 			<item id="ID_SEARCH_FILTER" text="Filtruj wyniki..."/>
@@ -1243,7 +1243,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Muzyka z tego samego albumu"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Odcinki tego samego serialu"/>
 			</menu>
-			<menu text="Usługi Web">
+			<menu id="ID_WEBSERVICES_LIST" text="Usługi Web">
 				<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 			</menu>
 			<menu text="Organizuj">
@@ -1273,7 +1273,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Muzyka z tego samego albumu"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Odcinki tego samego serialu"/>
 			</menu>
-			<menu text="Usługi Web">
+			<menu id="ID_WEBSERVICES_LIST" text="Usługi Web">
 				<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 				<separator/>
 				<item id="ID_LIBRARY_CREATETORRENT" text="Stwórz plik .torrent"/>
@@ -1311,7 +1311,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Muzyka z tego samego albumu"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Odcinki tego samego serialu"/>
 			</menu>
-			<menu text="Usługi Web">
+			<menu id="ID_WEBSERVICES_LIST" text="Usługi Web">
 			</menu>
 			<menu text="Organizuj">
 				<item id="ID_LIBRARY_RENAME" text="Zmień nazwę pliku"/>
@@ -1344,7 +1344,7 @@
 				<item id="ID_SEARCH_FOR_ALBUM" text="Muzyka z tego samego albumu"/>
 				<item id="ID_SEARCH_FOR_SERIES" text="Odcinki tego samego serialu"/>
 			</menu>
-			<menu text="Usługi Web">
+			<menu id="ID_WEBSERVICES_LIST" text="Usługi Web">
 				<item id="ID_LIBRARY_CREATETORRENT" text="Stwórz plik .torrent"/>
 			</menu>
 			<menu text="Organizuj">
